--- a/views/damage_products.ejs
+++ b/views/damage_products.ejs
@@ -550,7 +550,7 @@
                         <td
                           class="p-4 text-base font-medium text-red-500 whitespace-nowrap dark:text-white"
                         >
-                          <%= row.total_cost %>
+                          $ <%= row.total_cost %>
                         </td>
                       </tr>
                       <% }); %>
@@ -574,7 +574,7 @@
                         <td
                           class="p-4 text-base font-medium text-red-600 whitespace-nowrap dark:text-white"
                         >
-                          <%= total_loss %>
+                          $ <%= total_loss %>
                         </td>
                       </tr>
                     </tbody>
