--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -549,7 +549,7 @@
                             Discount:
                           </dt>
                           <dd class="col-span-2 text-gray-500" id="discount">
-                            $ <%=data.discount %>
+                            % <%=data.discount %>
                           </dd>
                         </dl>
 
