--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
             >
               Sign in to your account
             </h1>
-            <form class="space-y-4 md:space-y-6" action="/" method="POST">
+            <form class="space-y-4 md:space-y-6" action="/login" method="POST">
               <div>
                 <label
                   for="email"
@@ -67,7 +67,7 @@
                   required=""
                 />
               </div>
-              <div>
+              <!-- <div>
                 <label
                   for="login-category"
                   class="block mb-2 text-sm font-medium text-gray-900"
@@ -83,7 +83,7 @@
                   <option value="admin">Admin</option>
                   <option value="customer">Customer</option>
                 </select>
-              </div>
+              </div> -->
               <div class="flex items-center justify-between">
                 <div class="flex items-start">
                   <div class="flex items-center h-5">
