--- a/views/new_dashboard.ejs
+++ b/views/new_dashboard.ejs
@@ -413,7 +413,7 @@
                                             class="relative w-48 mt-1 sm:w-64 xl:w-96"
                                         >
                                             <input
-                                                type="text"
+                                                type="hidden"
                                                 name="search"
                                                 id="search"
                                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
@@ -422,7 +422,7 @@
                                         </div>
                                     </form>
                                     <div
-                                        class="flex items-center w-full sm:justify-end"
+                                        class="flex hidden items-center w-full sm:justify-end"
                                     >
                                         <div class="flex pl-2 space-x-1">
                                             <a
@@ -522,7 +522,7 @@
 
                                                 <th
                                                     scope="col"
-                                                    class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                                                    class="p-4 text-xs font-medium text-middle text-gray-500 uppercase dark:text-gray-400"
                                                 >
                                                     Actions
                                                 </th>
@@ -582,7 +582,7 @@
                                                     <div
                                                       class="overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400"
                                                     >
-                                                      <%= row.description %>
+                                                      <%= row.p_des %>
                                                     </div>
                                                   </div>
                                                 </td>
@@ -607,10 +607,14 @@
                                                 >
                                                   <%= row.p_price %>
                                                 </td>
-                                                <td class="p-4 space-x-2 whitespace-nowrap">
+                                                <td class="p-4 space-x-2 whitespace-nowrap text-middle ">
+
+                                                  
                                                   <a href="/changeProductsState?data=<%= encodeURIComponent(JSON.stringify(row)) %>">
 
-                                                  <button
+                                                  
+                                                  <% if(row.p_state == 0) { %>
+                                                    <button
                                                     type="button"
                                                     id="updateProductButton"
                                                     data-drawer-target="drawer-update-product-default"
@@ -633,9 +637,37 @@
                                                         d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
                                                         clip-rule="evenodd"
                                                       ></path>
-                                                    </svg>
-                                                    cart
+                                                  </svg>   
+                                                    Add to Cart
                                                   </button>
+                                                    <% } else { %>
+                                                      <button
+                                                    type="button"
+                                                    id="updateProductButton"
+                                                    data-drawer-target="drawer-update-product-default"
+                                                    data-drawer-show="drawer-update-product-default"
+                                                    aria-controls="drawer-update-product-default"
+                                                    data-drawer-placement="right"
+                                                    class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-red-500 hover:bg-red-600 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                                                  >
+                                                    <svg
+                                                      class="w-4 h-4 mr-2"
+                                                      fill="currentColor"
+                                                      viewBox="0 0 20 20"
+                                                      xmlns="http://www.w3.org/2000/svg"
+                                                    >
+                                                      <path
+                                                        d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
+                                                      ></path>
+                                                      <path
+                                                        fill-rule="evenodd"
+                                                        d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
+                                                        clip-rule="evenodd"
+                                                      ></path>
+                                                  </svg>   
+                                                    Remove from Cart
+                                                  </button>
+                                                      <% } %>
                                                   </a>
                                                   <button
                                                     onclick="openModalf('modal_<%= row.p_name %>')"
@@ -659,7 +691,7 @@
                                                         clip-rule="evenodd"
                                                       ></path>
                                                     </svg>
-                                                    Damaged
+                                                    Add to Damage
                                                   </button>
                         
                                                   <div
