--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,11 +18,11 @@
           href="#"
           class="flex items-center mb-6 text-2xl font-semibold text-gray-900"
         >
-          <img
+          <!-- <img
             class="w-8 h-8 mr-2"
             src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
             alt="logo"
-          />
+          /> -->
           Log in
         </a>
         <div
