--- a/views/supply_history.ejs
+++ b/views/supply_history.ejs
@@ -591,7 +591,7 @@
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
-                          <%= row.amount %>
+                          <%= row.i_amount %>
                         </td>
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
