--- a/views/damage_products.ejs
+++ b/views/damage_products.ejs
@@ -543,7 +543,7 @@
                         </td>
 
                         <td
-                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                          class="p-4 text-middle font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
                           <%= row.amount %>
                         </td>
