--- a/views/damage_products.ejs
+++ b/views/damage_products.ejs
@@ -427,6 +427,39 @@
                     </div>
                   </div>
                 </div>
+                <div>
+                  <form
+                    class="flex space-x-4"
+                    action="/filterSupply"
+                    method="post"
+                  >
+                    <div class="relative w-48 mt-1 sm:w-64 xl:w-96">
+                      <input
+                        type="date"
+                        name="from"
+                        id="products-search"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="from"
+                      />
+                    </div>
+                    <div class="relative w-48 mt-1 sm:w-64 xl:w-96">
+                      <input
+                        type="date"
+                        name="to"
+                        id="products-search"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="to"
+                      />
+                    </div>
+                    <button
+                      id=""
+                      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800"
+                      type="submit"
+                    >
+                      Search
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
