--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -556,10 +556,144 @@
                 </div>
                 <div class="w-full" id="new-products-chart"></div>
               </div>
+
+             
+              
             </div>
 
-            <div class="grid grid-cols-1 my-4 xl:grid-cols-2 xl:gap-4">
-              <!-- Activity Card -->
+            <div
+              class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2 2xl:grid-cols-3"
+            >
+
+
+            <div
+            class="items-center justify-between p-4 bg-gray-50 border border-gray-200 rounded-xl shadow-md hover:shadow-2xl sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
+          >
+          
+
+          <div class="w-full">
+            <div class="flex justify-center items-center w-full">
+              <h3
+                class="mb-4 text-lg font-semibold text-gray-900 dark:text-white"
+              >
+                Top Products
+              </h3>
+            </div>
+            <table class="min-w-full table-auto">
+              <thead>
+                <tr class="bg-gray-100">
+                  <th class="py-2 px-4 font-semibold text-left">
+                    Product
+                  </th>
+                  <th class="py-2 px-4 font-semibold text-left">
+                  
+                  </th>
+                  <th class="py-2 px-4 font-semibold text-right">
+                    Total sold
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200">
+                <% for (let i = 0; i < Math.min(5, mostP.length); i++) {
+                %> <%let row = mostP[i];%>
+                <tr class="hover:bg-gray-100">
+                  <td class="py-2 px-4"><%=row.p_name%></td>
+                  <td class="py-2 px-4"></td>
+                  <td class="py-2 px-4 text-right">$ <%=row.t_paid%></td>
+                </tr>
+                <%}%>
+              </tbody>
+            </table>
+          </div>
+            <!-- <div class="w-full" id="new-products-chart"></div> -->
+          </div>
+
+          <div
+          class="items-center justify-between p-4 bg-gray-50 border border-gray-200 rounded-xl shadow-md hover:shadow-2xl sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
+        >
+        
+
+        <div class="w-full">
+          <table class="min-w-full table-auto">
+            <div class="flex justify-center items-center w-full">
+              <h3
+                class="mb-4 text-lg font-semibold text-gray-900 dark:text-white"
+              >
+                Top Customers
+              </h3>
+            </div>
+            <thead class="bg-gray-100">
+              <tr class="">
+                <th class="py-2 px-4 font-semibold text-left">
+                  Customer
+                </th>
+                <th class="py-2 px-4 font-semibold text-left"></th>
+                <th class="py-2 px-4 font-semibold text-right">
+                  Total Purchased
+                </th>
+              </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-200">
+              <% for (let i = 0; i < Math.min(5, mostC.length); i++) {
+              %> <%let row = mostC[i];%>
+              <tr class="hover:bg-gray-100">
+                <td class="py-2 px-4"><%=row.customer%></td>
+                <td class="py-2 px-4"></td>
+                <td class="py-2 px-4 text-right">$ <%=row.t_paid%></td>
+              </tr>
+              <%}%>
+            </tbody>
+          </table>
+        </div>  <!-- <div class="w-full" id="new-products-chart"></div> -->
+        </div>
+
+              <div
+                class="items-center justify-between p-4 bg-gray-50 border border-gray-200 rounded-xl shadow-md hover:shadow-2xl sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
+              >
+              
+
+              <div class="w-full">
+                <div class="flex justify-center items-center w-full">
+                  <h3
+                    class="mb-4 text-lg font-semibold text-gray-900 dark:text-white"
+                  >
+                    Top Category
+                  </h3>
+                </div>
+                <table class="min-w-full table-auto">
+                  <thead>
+                    <tr class="bg-gray-100">
+                      <th class="py-2 px-4 font-semibold text-left">
+                        Category
+                      </th>
+                      <th class="py-2 px-4 font-semibold text-left">
+                      
+                      </th>
+                      <th class="py-2 px-4 font-semibold text-right">
+                        Total sold
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody class="divide-y divide-gray-200">
+                    <% for (let i = 0; i < Math.min(5, mostCat.length); i++) {
+                    %> <%let row = mostCat[i];%>
+                    <tr class="hover:bg-gray-100">
+                      <td class="py-2 px-4"><%=row.p_category%></td>
+                      <td class="py-2 px-4"></td>
+                      <td class="py-2 px-4 text-right">$ <%=row.t_paid%></td>
+                    </tr>
+                    <%}%>
+                  </tbody>
+                </table>
+              </div>
+                <!-- <div class="w-full" id="new-products-chart"></div> -->
+              </div>
+
+              
+            </div>
+
+            <!-- <div class="grid grid-cols-1 my-4 xl:grid-cols-2 xl:gap-4">
+              
               <div
                 class="p-4 mb-4 bg-gray-50 border border-gray-200 rounded-xl shadow-md hover:shadow-2xl dark:border-gray-700 sm:p-6 dark:bg-gray-800 xl:mb-0"
               >
@@ -578,7 +712,6 @@
                         <th class="py-2 px-4 font-semibold text-left">
                           Product
                         </th>
-                        <th class="py-2 px-4 font-semibold text-left"></th>
                         <th class="py-2 px-4 font-semibold text-right">
                           Total sold
                         </th>
@@ -589,7 +722,6 @@
                       %> <%let row = mostP[i];%>
                       <tr class="hover:bg-gray-100">
                         <td class="py-2 px-4"><%=row.p_name%></td>
-                        <td class="py-2 px-4"></td>
                         <td class="py-2 px-4 text-right">$ <%=row.t_paid%></td>
                       </tr>
                       <%}%>
@@ -597,7 +729,7 @@
                   </table>
                 </div>
               </div>
-              <!--Carousel widget -->
+              
               <div
                 class="p-4 bg-gray-50 border border-gray-200 rounded-xl shadow-md hover:shadow-2xl dark:border-gray-700 sm:p-6 dark:bg-gray-800"
               >
@@ -634,8 +766,13 @@
                     </tbody>
                   </table>
                 </div>
+
+                
               </div>
-            </div>
+
+              
+              
+            </div> -->
 
             <div
               class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2 2xl:grid-cols-3"
@@ -723,8 +860,16 @@
                             <td
                               class="p-4 text-sm font-semibold text-gray-900 whitespace-nowrap dark:text-white"
                             >
-                              <% if (row.source_table === "supplied") { %> - <%
-                              } %> $<%= row.total_amount %>
+                              <% if (row.source_table === "supplied") { %>  <span
+                                class="bg-red-100 text-red-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-md dark:bg-gray-700 dark:text-green-400 border border-green-100 dark:border-green-500"
+                                >-$<%= row.total_amount %></span<%
+                              } else {%> 
+                                <span
+                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-md dark:bg-gray-700 dark:text-green-400 border border-green-100 dark:border-green-500"
+                                >$<%= row.total_amount %></span
+                              <% } %>
+                              
+                              
                             </td>
 
                             <td
@@ -748,6 +893,7 @@
                 </div>
               </div>
               <!-- Card Footer -->
+              
             </div>
 
             <div
